tests/ui/type-alias-impl-trait/issue-90400-2.stderr
error[E0277]: the trait bound `B: Bar` is not satisfied
  --> $DIR/issue-90400-2.rs:25:9
   |
LL |         MyBaz(bar)
   |         ^^^^^^^^^^ the trait `Bar` is not implemented for `B`
   |
note: required by a bound in `MyBaz`
  --> $DIR/issue-90400-2.rs:29:17
   |
LL | struct MyBaz<B: Bar>(B);
   |                 ^^^ required by this bound in `MyBaz`
help: consider restricting type parameter `B`
   |
LL |     type FooFn<B: Bar> = impl Baz;
   |                 +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
